# RBPdetect2

./: .env.example  .gitattributes  .gitignore  LICENSE  RBPdetect2_genbank.tsv  RBPdetect2_streamlined.ipynb  RBPdetect2_uniprot.tsv  README.md  environment.yaml  environment.yml  inference.py  inference_parallel.py  pyproject.toml  requirements.txt  train.ipynb
benchmark/: PROVENANCE.md  README.md  RESULTS_clean_rescore.md  RESULTS_metric_tables.md  RESULTS_new_model.md  requirements.txt  run_classifier.py  score.py
benchmark/experimental/data/: benchmark.fasta  benchmark.tsv
benchmark/experimental/predictions/: blastp.tsv  deposcope.tsv  pharokka.tsv  phold.tsv  rbpdetect2.tsv  rbpdetect_new.tsv  rbpdetect_v4.tsv  spikehunter.tsv
benchmark/experimental/results/: metrics_by_tier.tsv  metrics_overall.tsv  rbpdetect_confusion_matrix.tsv  recall_by_label.tsv  summary.md  training_overlap.tsv  training_overlap_summary.md
benchmark/inphared/data/: benchmark.fasta  benchmark.tsv
benchmark/inphared/predictions/: deposcope.tsv  phanns.tsv  pharokka.tsv  phold.tsv  rbpdetect2.tsv  rbpdetect_new.tsv  rbpdetect_v4.tsv  spikehunter.tsv
benchmark/inphared/results/: metrics_overall.tsv  rbpdetect_confusion_matrix.tsv  recall_by_label.tsv  summary.md  training_overlap.tsv  training_overlap_summary.md
benchmark_embeddings/: README.md
benchmark_embeddings/embeddings/esm2-650m/: ids.tsv  metadata.json
benchmark_embeddings/results/: trained_model_metrics.csv  trained_model_test_predictions.tsv
benchmark_embeddings/splits/: split_seed42.metadata.json  split_seed42.tsv
benchmarks/: README.md
benchmarks/results/: linear_probe_metrics.csv  test_predictions.tsv  trained_model_split.tsv
data/: crosshit_tf_tsp.fasta  nonrbp.fasta  saprot_sequences.tsv  tf.fasta  tsp.fasta
final_esm2_classifier/: config.json  model.safetensors
input/: TF.fasta  TSP.fasta  nonRBPs.fasta
models/: rbpdetect2_linear_facebook_esm2_t33_650M_UR50D.pt
notebooks/: embedding_benchmark.ipynb  train_classifier.ipynb
scripts/: benchmark_predict.py  benchmark_trained_model.py  build_saprot_sequences.py  check_benchmark_overlap.py  check_structures.py  clean_benchmark_rescore.py  combine_fastas.py  diagnose_saprot_mismatch.py  diversity_analysis.py  extract_esm2_embeddings.py  extract_esmc_embeddings.py  extract_saprot_embeddings.py  filter_deposcope.py  per_class_tables.py  predict_cli.py  train_classifier.py
src/rbpdetect2/: benchmark_data.py  benchmarking.py  embedding_cli.py  model.py  plm_embed.py  predict.py  train.py
tests/: test_benchmark_data.py  test_benchmarking.py  test_embedding_cli.py
(+6 files in other folders)
