[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rbpdetect2"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    # ML core
    "torch>=2.3.0",
    # Protein language models via Hugging Face (ESM2-650M is the primary model;
    # SaProt also loads through transformers).
    "transformers>=4.57",
    "safetensors>=0.7",
    "huggingface-hub>=0.36",
    "accelerate>=1.0",
    # Data / training
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    # Notebook
    "jupyterlab>=4.2",
    "ipywidgets>=8.1",
    "pypandoc_binary>=1.13",  # bundles pandoc binary — needed for nbconvert PDF export
    # Progress / utils
    "tqdm>=4.66",
    "rich>=13.7",
    # Config
    "pyyaml>=6.0",
    # Eval / viz
    "matplotlib>=3.9",
    "seaborn>=0.13",
    # Biopython for FASTA handling
    "biopython>=1.84",
]

[dependency-groups]
# Optional: only needed to reproduce the ESMC-6B embedding benchmark. The core
# classifier uses ESM2-650M, which needs nothing beyond transformers above.
# Install with: uv sync --group esmc
esmc = [
    "esm @ git+https://github.com/Biohub/esm.git@f652b471d29da828b31e9b7a9cf7d0a7803240f5",
]

[tool.uv]
default-groups = []

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
